examples/test/testpolicy11747.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11747
  namespace: namespace482
spec:
  podSelector:
    matchLabels:
      key23: value23
      key22: value44
      key10: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value0
          key34: value36
      podSelector:
        matchLabels:
          key5: value23
          key14: value13
